Improved deprecated constructor in JarInJarLoader